--- a/assets/android_asset/voiceflow.html
+++ b/assets/android_asset/voiceflow.html
@@ -1,38 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Voiceflow Assistant</title>
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      background-color: transparent;
-      z-index: -999;
-    }
-    .voiceflow-container {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-    }
-  </style>
-</head>
-<body>
-  <!-- <div class="voiceflow-container"> -->
-    <script type="text/javascript">
-      (function(d, t) {
-          var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
-          v.onload = function() {
-            window.voiceflow.chat.load({
-              verify: { projectID: '6667d1f2a7b6dc228b2386a9' },
-              url: 'https://general-runtime.voiceflow.com',
-              versionID: 'production'
-            });
-          }
-          v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
-      })(document, 'script');
-    </script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Voiceflow Assistant</title>
+    <style>
+      /* Hide minimize button */
+      .vfrc-header--button {
+        display: none !important;
+      }
+
+      /* Hide close button */
+      .vf-chat-header__close {
+        display: none !important;
+      }
+    </style>
+  </head>
+  <body></body>
+  <script type="text/javascript">
+    (function (d, t) {
+      var v = d.createElement(t),
+        s = d.getElementsByTagName(t)[0];
+      v.onload = function () {
+        window.voiceflow.chat.load({
+          verify: { projectID: "6667d1f2a7b6dc228b2386a9" },
+          url: "https://general-runtime.voiceflow.com",
+          versionID: "production",
+        });
+        window.voiceflow.chat.open();
+      };
+      v.src = "https://cdn.voiceflow.com/widget/bundle.mjs";
+      v.type = "text/javascript";
+      s.parentNode.insertBefore(v, s);
+    })(document, "script");
+  </script>
   <!-- </div> -->
-</body>
 </html>
+
+<!-- <script type="text/javascript">
+  (function (d, t) {
+    var v = d.createElement(t),
+      s = d.getElementsByTagName(t)[0];
+    v.onload = function () {
+      window.voiceflow.chat.load({
+        verify: { projectID: "'6667d1f2a7b6dc228b2386a9" },
+        url: "https://general-runtime.voiceflow.com",
+        versionID: "production",
+      });
+      document.addEventListener("message", function (event) {
+        const message = JSON.parse(event.data);
+        if (message.type === "show") {
+          window.voiceflow.chat.show();
+        } else if (message.type === "hide") {
+          window.voiceflow.chat.hide();
+        } else if (message.type === "open") {
+          window.voiceflow.chat.open();
+        } else if (message.type === "close") {
+          window.voiceflow.chat.close();
+        }
+      });
+
+    };
+    v.src = "https://cdn.voiceflow.com/widget/bundle.mjs";
+    v.type = "text/javascript";
+    s.parentNode.insertBefore(v, s);
+  })(document, "script");
+</script> -->
